# Simple_Bank

./: overview.puml
certs/: instructions.txt  v3.ext
certs/CA/: cert_sign_req.csr  myCA.key  myCA.pem  myCA.srl
certs/cert/: my_cert.crt  priv.key
client/: Cargo.toml
client/src/: data_handler.rs  lib.rs  main.rs  network.rs  test.rs
data_accounts/: Cargo.toml
data_misc/: Cargo.toml
data_transactions/: Cargo.toml
database_handler/: Cargo.toml
database_handler/src/: lib.rs  main.rs  schema.rs
database_handler/src/models/: mod.rs
diesel_test/: Cargo.toml
diesel_test/src/: db_connection.rs  main.rs
diesel_test/src/models/: product.rs
load_balancer/: .env  Cargo.toml
load_balancer/src/: data_handler.rs  lib.rs  main.rs
network_listener/: Cargo.toml  build.rs
network_listener/src/: client_handler.rs  crypto.rs  lib.rs  messages_request.rs  network_worker.rs  server_connection.rs
network_listener/src/protos/: message.proto
network_listener/uml/: State_Diagram.puml  global_overview.puml  network_listener.puml  network_listener_overview.puml  testing.puml
server/: Cargo.toml
server/src/: crypto.rs  data_handler.rs  lib.rs  main.rs  network.rs
structs/: Cargo.toml  build.rs
structs/src/: lib.rs  schema.rs
structs/src/models/: mod.rs
structs/src/protos/: message.proto
