[package]
name = "client"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"
text_io = "0.1.8"
log = "0.4.8"
simplelog = "0.8.0"
protobuf = "2.14.0"
network_listener={path="../network_listener"}
structs={path="../structs"}