[package]
name = "load_balancer"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "0.8.0"
base64 ="=0.12.1"
rand = "0.7.3"
network_listener={path="../network_listener"}
database_handler={path="../database_handler"}