[package]
name = "structs"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protobuf-codegen-pure = "<2.14.5"

[dependencies]
rand = "0.7.3"
chrono={version="0.4",features=["serde"]}
uuid={version = "0.8",features=["v4","serde"]}
bigdecimal = {version="0.1.2",features=["serde"]}
protobuf = "<2.14.5"
diesel = { version = "1.4.4", features = ["postgres","chrono","uuidv07","numeric"] }
serde ={version="1.0",features=["derive"]}
serde_json ="1.0"